--- a/portfolio.html
+++ b/portfolio.html
@@ -16,16 +16,16 @@
         <nav>
           <a class="logo link" href="./portfolio.html">Web <span class="header-span">Studio</span></a>
             <ul class="list">
-              <li><a class="link" class="list-item" href="./index.html">Studio</a></li>
-              <li><a class="link" class="list-item" href="./portfolio.html">Portfolio</a></li>
-              <li><a class="link" class="list-item" href="">Contacts</a></li>
+              <li><a class="list-item link" href="./index.html">Studio</a></li>
+              <li><a class="list-item link" href="./portfolio.html">Portfolio</a></li>
+              <li><a class="list-item link" href="">Contacts</a></li>
             </ul>
         </nav>
 
-        <address>
+        <address class="address-section">
           <ul class="list">
-            <li><a class="link" class="address-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" class="address-item" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="address-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
       </header>
