--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
 
-        <address>
+        <address class="address-section">
           <ul class="list">
             <li><a class="address-item link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="address-item link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
